Fix small screen layout issues

--- a/style.css
+++ b/style.css
@@ -2,28 +2,32 @@
     margin-right: auto;
     margin-left: auto;
     max-width: 1320px;
+    display: flex;
 }
 
 #header {
     background-color: aqua;
     display: flex;
+    flex: 1;
     justify-content: center;
     align-items: center;
 }
 
 #logo {
     margin-right: auto;
-    padding-left: 12px;
+    padding-left: 1em;
     white-space: nowrap;
     text-decoration: none;
 }
 
 #nav-list {
-    padding-right: 12px;
+    margin: 0;
+    padding: 0;
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .nav-item {
-    padding: 0.5rem;
+    padding: 1rem;
 }
